chore: update BadgeFormDTO.java for security